# abunnytech

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEMO_RUNBOOK.md  FINAL_GAP_LIST.md  README.md  RELEASE_NOTES.md  abunnytech.db-shm  abunnytech.db-wal  pyproject.toml  ruff.toml
12lab-video-analytic/: analyze.py
agents/stage0_identity/: pyproject.toml
agents/stage0_identity/src/abunny_stage0_identity/: __init__.py  __main__.py  cli.py  compiler.py  loader.py  models_input.py  pipeline.py  system_prompt.py
agents/stage0_identity/src/abunny_stage0_identity/adapters/: __init__.py  elevenlabs.py  higgsfield.py  nano_banana.py
agents/stage0_identity/tests/: test_compiler.py  test_loader.py  test_pipeline.py
agents/stage1_discovery/: pyproject.toml
agents/stage1_discovery/src/abunny_stage1_discovery/: __init__.py  analysis_enums.py  analysis_ports.py  blueprint_builder.py  browser_ports.py  cli.py  models.py  pipeline.py  planner.py  scoring.py
agents/stage1_discovery/src/abunny_stage1_discovery/adapters/: __init__.py  fixture_adapters.py  vendor_shim.py
agents/stage1_discovery/tests/: test_fixture_pipeline.py  test_scoring.py
agents/stage2_generation/: pyproject.toml
agents/stage2_generation/src/abunny_stage2_generation/: __init__.py  pipeline.py  render_port.py
agents/stage2_generation/tests/: test_stage2_generation.py
agents/stage3_distribution/: __init__.py  contracts.py  dm_fsm.py  executor.py  persistence.py  pyproject.toml  reply_generator.py
agents/stage3_distribution/adapters/: base.py
agents/stage3_distribution/tests/: test_comment_triage.py  test_executor.py  test_persistence.py
agents/stage4_analytics/: __init__.py  baseline.py  directive_generator.py  pyproject.toml  redo_queue.py
apps/api/: pyproject.toml
apps/api-tmp/: main.py
apps/api/src/apps/api/: main.py
apps/orchestrator-tmp/: __init__.py  cli.py  context.py  pipeline.py
data/: hackathon_pipelines.sqlite3
docs/: skill-m2.md
docs/architecture/: pipeline-handoffs.md
docs/handoffs/: m1t1.md  m1t2.md  m1t3.md  m1t4.md  m2t2.md  m2t4.md
docs/proposed-contract-changes/: review-index.md
examples/contracts/: content_package.json  distribution_record.json  identity_matrix.json  optimization_directive_envelope.json  product_catalog_item.json  redo_queue_item.json  video_blueprint.json
examples/stage0/: persona.seed.yaml
examples/stage2/: run_dry_run.py
integration/: PIPELINE_INSTRUCTIONS.md  README.md  browser_use_veo31_snippets.md  browser_use_veo31_snippets.py  debug_dashboard.py  env.example  local_instagram_browser.py  manifest.json  smoke_test_api.py
orchestrator/: cli.py  pipeline.py
output/stage5_drafts/: outreach-002aef69-62c0-443a-87ab-fe5468a459b9.json  outreach-00c569ba-6e2f-44d6-9d5a-dd64481d7634.json  outreach-05fee027-1918-4ff7-b16b-c94606e41240.json  outreach-0686eaaf-d592-4361-8e13-25a04aa15797.json  outreach-080deadf-ade9-4fd7-889e-c2e08f2b36a4.json  outreach-12fbd643-f46b-42db-a514-faf76e4e813c.json  outreach-133374ce-aa5c-466b-8f58-8e560d835888.json  outreach-14b27aaf-0e43-4450-ad1f-df258e012d82.json  outreach-18e7449a-0193-4c26-a0c0-f659092f31ac.json  outreach-1ab61b88-cd50-4130-bb2e-67042f5410f7.json  outreach-23903b82-bc3e-4123-9dcd-d7505b485f61.json  outreach-252ac2a4-b881-431c-a32a-a2289a866523.json  outreach-2741d689-4255-41d9-a2a8-d0304fc9c707.json  outreach-2842f0cb-1edb-4fec-a20d-3c1ad613dfa3.json  outreach-2df5f7b5-2147-4f2a-98a2-d27e8a946c4d.json  outreach-33d84444-9e24-4608-8708-5950708b7106.json  outreach-36ab5906-93e2-45bc-8966-b71454eecf03.json  outreach-3c1525e4-acc1-45b1-9458-36efee0238cc.json  outreach-3dbb10f0-d2e6-4ee1-a63a-9e8a51c63355.json  outreach-4053d62b-906c-44b1-9184-caaa7c6d90e5.json  outreach-42e93053-3e90-4893-93c0-076c315ba12c.json  outreach-43d1edbd-3ea9-43d2-8c60-36109c44e046.json  outreach-513b5a4f-84ec-48f4-b057-6a6478e55d25.json  outreach-515aa04a-dec6-4f18-b03d-5a8c9ce50e40.json  outreach-540ce3dd-899e-4a44-89a4-cf08a5d3ff29.json  outreach-574822c5-ef65-4d73-bae8-7d60e2d201d7.json  outreach-57fbe7b1-9c87-4776-9324-5e2779f18072.json  (+57 more)
runtime_dashboard/: __init__.py  app.py  data_loader.py  flask_owner_app.py  owner_data_store.py  secrets_store.py
scripts/: build_local_video_structure_db.py  collect_analytics.py  demo.py  process_instagram_reel_queue.py  retry_local_reel_discovery.py  run_db_to_veo_generation.py  run_simple_reels_pipeline_test.py  scrape_test_mp4_folder.py  smoke.py
stage-0-1-2/: README.md
stage-0-5/: .env.example  .gitignore  README.md  pyproject.toml
stage-0-5/.streamlit/: config.toml
stage-0-5/apps/dashboard/: app.py
stage-0-5/apps/dashboard/fixtures/: demo_seed.json
stage-0-5/apps/dashboard/pages/: analytics.py  catalog.py  content.py  discovery.py  identity.py
stage-0-5/docs/handoffs/: main.md
stage-0-5/examples/stage5/: dry_run_demo.py
stage-0-5/scripts/runbooks/: demo.py
stage-0-5/services/control_plane/: __main__.py  app.py
stage-0-5/stages/stage0_identity/: adapters.py  router.py  service.py
stage-0-5/stages/stage1_discover/: adapters.py
stage-0-5/stages/stage2_generate/: adapters.py  router.py  service.py
stage-0-5/stages/stage3_distribute/: router.py  service.py
stage-0-5/stages/stage4_analyze/: router.py
stage-0-5/stages/stage5_monetize/: __init__.py  adapters.py  router.py  service.py
stage-0-5/status/: m3t3.md  m3t4.md  main.md
stage-0-5/tests/: conftest.py  test_control_plane.py  test_stage1_discover.py  test_stage5_drafts.py  test_stage5_scoring.py  test_state.py
stage-3-4/agents/stage4_analytics/: analysis_engine.py  contracts.py  ingestion.py  models.py  pyproject.toml  retention.py  runner.py  state_adapter.py
state_api/: __init__.py  main.py
status/: m1t1.md  m1t2.md  m1t3.md  m1t4.md
status/m2/: m2t3.md  (+1 more)
tests/: __init__.py  conftest.py  test_contract_compat.py
veo-video-pipeline/: .gitignore  generate.py
video-pipeline/: .env.example  .gitignore  README.md  SocialMediaPipeline.csv  Total Analysis Output.txt  analyze.py  genai_client.py  generate.py  generate_16.bat  requirements.txt  resultAnalyzegemini.py  results.csv
(+117 files in other folders)
