[project]
name = "abunnytech"
version = "0.1.0"
description = "Autonomous AI Creator Pipeline — hackathon integration"
requires-python = ">=3.12,<3.14"
dependencies = [
    # M1 workspace packages
    "abunny-stage0-identity",
    "abunny-stage2-generation",
    "media-pipeline",
    "pipeline-core",
    "pipeline-contracts",
    "pipeline-stage0-identity",
    "pipeline-stage1-discover",
    "pipeline-stage2-generate",
    "pipeline-api",
    # M2 workspace packages
    "browser-runtime",
    "abunny-evals",
    "hackathon-pipelines",
    # Runtime API / dashboard / orchestrator
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "flask>=3.0.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "jinja2>=3.1.4",
    "pillow>=11.0.0",
    "structlog>=24.4.0",
    "rich>=13.9.0",
    "typer>=0.15.0",
    "python-multipart>=0.0.18",
]

[tool.uv.workspace]
members = [
    "agents/stage0_identity",
    "agents/stage1_discovery",
    "agents/stage2_generation",
    "agents/stage3_distribution",
    "agents/stage4_analytics",
    "packages/media_pipeline",
    "packages/core",
    "packages/pipeline_contracts",
    "packages/stage0_identity",
    "packages/stage1_discover",
    "packages/stage2_generate",
    "apps/m1/api",
    "packages/browser_runtime",
    "packages/evals",
    "packages/hackathon_pipelines",
]

[tool.uv.sources]
abunny-stage0-identity = { workspace = true }
abunny-stage2-generation = { workspace = true }
media-pipeline = { workspace = true }
pipeline-core = { workspace = true }
pipeline-contracts = { workspace = true }
pipeline-stage0-identity = { workspace = true }
pipeline-stage1-discover = { workspace = true }
pipeline-stage2-generate = { workspace = true }
pipeline-api = { workspace = true }
abunny-stage1-discovery = { workspace = true }
browser-runtime = { workspace = true }
abunny-evals = { workspace = true }
hackathon-pipelines = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13.0",
    "abunny-stage1-discovery",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
    "packages/pipeline_contracts/tests",
    "packages/media_pipeline/tests",
    "agents/stage0_identity/tests",
    "agents/stage1_discovery/tests",
    "agents/stage2_generation/tests",
    "agents/stage3_distribution/tests",
    "packages/hackathon_pipelines/tests",
]
pythonpath = [".", "apps/m1/api/src"]
filterwarnings = ["ignore::DeprecationWarning"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
