[project]
name = "abunnytech"
version = "0.1.0"
description = "Autonomous AI Creator Pipeline - Hackathon MVP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "streamlit>=1.41.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "jinja2>=3.1.4",
    "pillow>=11.0.0",
    "openai>=1.58.0",
    "elevenlabs>=1.15.0",
    "yt-dlp>=2024.12.0",
    "playwright>=1.49.0",
    "structlog>=24.4.0",
    "rich>=13.9.0",
    "typer>=0.15.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages", "apps"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501", "UP046"]

[tool.ruff.lint.per-file-ignores]
"**/router.py" = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]

[tool.mypy]
python_version = "3.12"
strict = true
