[project]
name = "abunny-stage1-discovery"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pipeline-contracts",
    "pydantic>=2.0",
]

[project.scripts]
abunny-stage1-dry-run = "abunny_stage1_discovery.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/abunny_stage1_discovery"]
