[project]
name = "abunny-stage2-generation"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "media-pipeline",
    "pipeline-contracts",
    "pipeline-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/abunny_stage2_generation"]
