[project]
name = "pipeline-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pipeline-core",
    "pipeline-contracts",
    "pipeline-stage0-identity",
    "pipeline-stage1-discover",
    "pipeline-stage2-generate",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apps"]
